# ather-bytebattles

./: .gitignore  CMakeLists.txt  README.md  apply_patch.bat  apply_patch.sh  build.py
app/: asdk_app.c  main.c
app/config/: app_config.cmake  asdk_config.cmake
app/inc/: app_adc.h  app_can.h  app_gpio.h  app_rpi.h  asdk_app.h  can_process.h
app/linker_files/: preprocessed_linker_file_cm0plus.ld
app/src/: app_adc.c  app_can.c  app_gpio.c  app_rpi.c  can_process.c
arsenal/: debug_print.h  debug_uart.c  debug_uart.h  scheduler.c  scheduler.h
asdk-gen2/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  build.py
asdk-gen2/cmake/: asdk_app_recipe.cmake  c2000_toolchain.cmake  devel_arm_eabi_toolchain.cmake  helper_functions.cmake  macro.cmake
asdk-gen2/docs/: Doxyfile  build.md  conf.py  getting_started.md  index.rst  introduction.md  setup.md
asdk-gen2/docs/developer_guides/: adding_platform.md  build_system.md  index.rst  setup.md  testing.md
asdk-gen2/docs/reference/: index.rst
asdk-gen2/docs/reference/apis/: adc.rst  can.rst  clock.rst  flash.rst  gpio.rst  i2c.rst  index.rst  pwm.rst  spi.rst  status_and_error_codes.rst  system.rst  timers.rst  uart.rst  watchdog.rst
asdk-gen2/docs/user_guides/: index.rst  peripherals.drawio
asdk-gen2/docs/user_guides/configurations/: app_config.md  asdk_config.md  index.rst
asdk-gen2/docs/user_guides/peripherals/: adc.md  can.md  gpio.md  index.rst  pwm.md  timer.md
asdk-gen2/inc/: asdk_adc.h  asdk_can.h  asdk_clock.h  asdk_emulated_eeprom.h  asdk_error.h  asdk_flash.h  asdk_gpio.h  asdk_i2c.h  asdk_mcu_pins.h  asdk_peripherals.h  asdk_pinmux.h  asdk_pwm.h  asdk_spi.h  asdk_system.h  asdk_timer.h  asdk_uart.h  asdk_wdt.h
asdk-gen2/lib/: CMakeLists.txt
asdk-gen2/lib/printf/: CMakeLists.txt  printf.h
asdk-gen2/lib/ring_buffer/: CMakeLists.txt  ring_buffer.c  ring_buffer.h
asdk-gen2/middleware/: CMakeLists.txt
asdk-gen2/middleware/can_service/: CMakeLists.txt  asdk_can_service.c  asdk_can_service.h
asdk-gen2/middleware/external_eeprom/: CMakeLists.txt  asdk_external_eeprom.c  asdk_external_eeprom.h
asdk-gen2/middleware/rtos/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-CPU/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-CPU/ARM-Cortex-M/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-CPU/C28x/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-CPU/C28x/BSP/: bsp.c  bsp.h  bsp_os.c  bsp_os.h
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-CPU/C28x/CCS/: cpu_a.asm
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-LIB/Ports/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-LIB/Ports/ARM-Cortex-M4/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Ports/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Ports/ARM-Cortex-M/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Ports/ARM-Cortex-M/ARMv6-M/: os_cpu_c.c
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Ports/C28x/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Ports/C28x/Generic/CCS/: os_cpu_a.asm
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/: CMakeLists.txt
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/SystemView/SEGGER/: SEGGER_SYSVIEW.c
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/SystemView/Sample/uCOS-III/: SEGGER_SYSVIEW_uCOSIII.c  os_trace_events.h
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/SystemView/Sample/uCOS-III/Config/: os_cfg_trace.h
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/SystemView/Sample/uCOS-III/Config/Cortex-M/: SEGGER_SYSVIEW_Config_uCOSIII.c
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/TraceRecorder/: trcKernelPort.c
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/TraceRecorder/config/: trcConfig.h  trcSnapshotConfig.h  trcStreamingConfig.h
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/TraceRecorder/extras/TraceRecorderInit/: TraceRecorderInit.cpp
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/TraceRecorder/extras/TraceRecorderInit/include/: TraceRecorderInit.h
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/TraceRecorder/include/: os_trace_events.h  trcHardwarePort.h  trcKernelPort.h
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/TraceRecorder/streamports/ARM_ITM/: Keil-uVision-Tracealyzer-ITM-Exporter.ini
asdk-gen2/middleware/rtos/RTOS_uC-OS3/uC-OS3/Trace/TraceRecorder/streamports/Jlink_RTT/include/: trcStreamingPort.h
asdk-gen2/middleware/scheduler/: CMakeLists.txt
asdk-gen2/platform/: CMakeLists.txt  CommonFlags.cmake  platform.cmake
asdk-gen2/platform/cyt2b75/: CMakeLists.txt  FindFlags.cmake
asdk-gen2/platform/cyt2b75/dal/inc/: asdk_platform.h  asdk_scb.h
asdk-gen2/platform/cyt2b75/dal/src/: asdk_adc.c  asdk_can.c  asdk_clock.c  asdk_emulated_eeprom.c  asdk_flash.c  asdk_gpio.c  asdk_i2c.c  asdk_pinmux.c  asdk_pwm.c  asdk_scb.c  asdk_spi.c  asdk_system.c  asdk_timer.c  asdk_uart.c  asdk_wdt.c
asdk-gen2/setup/: requirements.txt  setup.py  setup.yaml
asdk-gen2/utils/: CMakeLists.txt  asdk.py
asdk-gen2/utils/file_templates/: dal_header.txt  dal_source.txt
asdk-gen2/utils/image_magic/: CMakeLists.txt  magic.c
config/: adc_cfg.c  adc_cfg.h  defaults.h  gpio_cfg.c  gpio_cfg.h
sensors/colour/: colour.c  colour.h
sensors/ultrasonic/: ultrasonic.h  ultrsonic.c
