IF(${TARGET_PLATFORM} STREQUAL "KW36")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "S32K142")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "CYT2B75_M0PLUS")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "CYT2B75_M4")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "MKV46F")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "C2000")
	ADD_SUBDIRECTORY(C28x)
ENDIF()

SET(CPU_SRC ${CPU_SRC} PARENT_SCOPE)
SET(CPU_INC ${CPU_INC} PARENT_SCOPE)
SET(CPU_ASM ${CPU_ASM} PARENT_SCOPE)