IF(${TARGET_PLATFORM} STREQUAL "KW36")
	ADD_SUBDIRECTORY(ARM-Cortex-M4)
ELSEIF(${TARGET_PLATFORM} STREQUAL "S32K142")
	ADD_SUBDIRECTORY(ARM-Cortex-M4)
ELSEIF(${TARGET_PLATFORM} STREQUAL "CYT2B75")
	ADD_SUBDIRECTORY(ARM-Cortex-M4)
ELSEIF(${TARGET_PLATFORM} STREQUAL "MKV46F")
	ADD_SUBDIRECTORY(ARM-Cortex-M4)
ELSEIF(${TARGET_PLATFORM} STREQUAL "C2000")
	# ADD_SUBDIRECTORY(C28x)
ENDIF()

SET(LIB_PORT_SRC ${LIB_PORT_SRC} PARENT_SCOPE) 
SET(LIB_PORT_INC ${LIB_PORT_INC} PARENT_SCOPE)
SET(LIB_PORT_ASM ${LIB_PORT_ASM} PARENT_SCOPE) 
