IF(${TARGET_PLATFORM} STREQUAL "KW36")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "S32K142")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "CYT2B75_M0PLUS")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "CYT2B75_M4")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "MKV46F")
	ADD_SUBDIRECTORY(ARM-Cortex-M)
ELSEIF(${TARGET_PLATFORM} STREQUAL "C2000")
	ADD_SUBDIRECTORY(C28x)
ENDIF()

SET(PORT_SRC ${PORT_SRC} PARENT_SCOPE)
SET(PORT_INC ${PORT_INC} PARENT_SCOPE)
SET(PORT_ASM ${PORT_ASM} PARENT_SCOPE)